[project]
name = "tuto-package"
version = "0.1.1 "
description = "Tutorial for building a Python package with Poetry"
authors = [
    { name = "Dridi Yassine", email = "yassine.dridi@dauphine.tn" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[tool.poetry]
packages = [{ include = "tuto-package", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.15.0,<0.16.0)"
]
